Fix word-break and overflow

--- a/styles/app.less
+++ b/styles/app.less
@@ -33,6 +33,15 @@ body {
 
 	li { 
 		padding: 5px 10px;
+		-ms-word-break: break-all;
+		word-break: break-all;
+
+		// Non standard for webkit
+		word-break: break-word;
+
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		hyphens: auto;
 
 		&:nth-child(odd) {
 			background: #eee;
